TESTS = $(check_PROGRAMS)

abc_test_SOURCES = abc/abc.c abc/abc_f.f
check_PROGRAMS = abc_test

cf14_test_SOURCES = cf14/cf14.c cf14/cf14_f.f
check_PROGRAMS += cf14_test

e2_test_SOURCES = e2/e2.c e2/e2_f.f
check_PROGRAMS += e2_test

easy_test_SOURCES = easy/easy.c easy/easy_f.f
check_PROGRAMS += easy_test

eq_test_SOURCES = eq/eq.c eq/eq_f.f
check_PROGRAMS += eq_test

f0_test_SOURCES = f0/f0.c f0/f0_f.f
check_PROGRAMS += f0_test

f20_test_SOURCES = f20/f20.c f20/f20_f.f
check_PROGRAMS += f20_test

f27_test_SOURCES = f27/f27.c f27/f27_f.f
check_PROGRAMS += f27_test

fa_test_SOURCES = fa/fa.c fa/fa_f.f
check_PROGRAMS += fa_test

fb_test_SOURCES = fb/fb.c fb/fb_f.f
check_PROGRAMS += fb_test

fc_test_SOURCES = fc/fc.c fc/fc_f.f
check_PROGRAMS += fc_test

fcb_test_SOURCES = fcb/fcb.c fcb/fcb_f.f
check_PROGRAMS += fcb_test

fd_test_SOURCES = fd/fd.c fd/fd_f.f
check_PROGRAMS += fd_test

fe_test_SOURCES = fe/fe.c fe/fe_f.f
check_PROGRAMS += fe_test

ff_test_SOURCES = ff/ff.c ff/ff_f.f
check_PROGRAMS += ff_test

fg_test_SOURCES = fg/fg.c fg/fg_f.f
check_PROGRAMS += fg_test

fh_test_SOURCES = fh/fh.c fh/fh_f.f
check_PROGRAMS += fh_test

fi_test_SOURCES = fi/fi.c fi/fi_f.f
check_PROGRAMS += fi_test

fj_test_SOURCES = fj/fj.c fj/fj_f.f
check_PROGRAMS += fj_test

fk_test_SOURCES = fk/fk.c fk/fk_f.f
check_PROGRAMS += fk_test

fl_test_SOURCES = fl/fl.c fl/fl_f.f
check_PROGRAMS += fl_test

fm_test_SOURCES = fm/fm.c fm/fm_f.f
check_PROGRAMS += fm_test

fn_test_SOURCES = fn/fn.c fn/fn_f.f
check_PROGRAMS += fn_test

forr_test_SOURCES = forr/forr.c forr/forr_f.f
check_PROGRAMS += forr_test

fstr_test_SOURCES = fstr/fstr.c fstr/fstr_f.f
check_PROGRAMS += fstr_test

ft_test_SOURCES = ft/ft.c ft/ft_f.f
check_PROGRAMS += ft_test

fun_test_SOURCES = fun/fun.c fun/fun_f.f
check_PROGRAMS += fun_test

fz_test_SOURCES = fz/fz.c fz/fz_f.f
check_PROGRAMS += fz_test

pz_test_SOURCES = pz/pz.c pz/pz_f.f
check_PROGRAMS += pz_test

q_test_SOURCES = q/q.c q/q_f.f
check_PROGRAMS += q_test

rev_test_SOURCES = rev/rev.c rev/rev_f.f
check_PROGRAMS += rev_test

rr_test_SOURCES = rr/rr.c rr/rr_f.f
check_PROGRAMS += rr_test

ss1_test_SOURCES = ss1/ss1.c ss1/ss1_f.f
check_PROGRAMS += ss1_test

strtok_test_SOURCES = strtok/strtok.c strtok/strtok_f.f
check_PROGRAMS += strtok_test

sub_test_SOURCES = sub/sub.c sub/sub_f.f
check_PROGRAMS += sub_test

subt_test_SOURCES = subt/subt.c subt/subt_f.f
check_PROGRAMS += subt_test

sz_test_SOURCES = sz/sz.c sz/sz_f.f
check_PROGRAMS += sz_test

sz1_test_SOURCES = sz1/sz1.c sz1/sz1_f.f
check_PROGRAMS += sz1_test

user_test_SOURCES = user/user.c user/user_f.f
check_PROGRAMS += user_test

v7_test_SOURCES = v7/v7.c v7/v7_f.f
check_PROGRAMS += v7_test

vv_test_SOURCES = vv/vv.c vv/vv_f.f
check_PROGRAMS += vv_test


